# py-template

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/linters/: .mypy.ini
.github/workflows/: checkov.yml  nox.yml  security.yml  test.yml
py_template/: a.py
src/py_template/: __init__.py  main.py
tests/: test_dummy.py
